--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
@@ -427,6 +427,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "name": {
                           "description": "Name the name of the binding.",
                           "type": "string",
@@ -503,6 +514,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "name": {
                           "description": "Name the name of the binding.",
                           "type": "string",
@@ -533,6 +555,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "match": {
                           "description": "Match defines the matching statement.",
                           "x-kubernetes-preserve-unknown-fields": true
@@ -604,6 +637,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "name": {
                           "description": "Name the name of the binding.",
                           "type": "string",
@@ -1188,6 +1232,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "name": {
                           "description": "Name the name of the binding.",
                           "type": "string",
@@ -1267,6 +1322,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "name": {
                           "description": "Name the name of the binding.",
                           "type": "string",
@@ -1297,6 +1363,17 @@
                         "value"
                       ],
                       "properties": {
+                        "compiler": {
+                          "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                          "type": [
+                            "string",
+                            "null"
+                          ],
+                          "enum": [
+                            "jp",
+                            "cel"
+                          ]
+                        },
                         "match": {
                           "description": "Match defines the matching statement.",
                           "x-kubernetes-preserve-unknown-fields": true
