--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha2.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha2.json
@@ -555,6 +555,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "name": {
                               "description": "Name the name of the binding.",
                               "type": "string",
@@ -631,6 +642,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "name": {
                               "description": "Name the name of the binding.",
                               "type": "string",
@@ -661,6 +683,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "match": {
                               "description": "Match defines the matching statement.",
                               "x-kubernetes-preserve-unknown-fields": true
@@ -732,6 +765,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "name": {
                               "description": "Name the name of the binding.",
                               "type": "string",
@@ -1316,6 +1360,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "name": {
                               "description": "Name the name of the binding.",
                               "type": "string",
@@ -1395,6 +1450,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "name": {
                               "description": "Name the name of the binding.",
                               "type": "string",
@@ -1425,6 +1491,17 @@
                             "value"
                           ],
                           "properties": {
+                            "compiler": {
+                              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+                              "type": [
+                                "string",
+                                "null"
+                              ],
+                              "enum": [
+                                "jp",
+                                "cel"
+                              ]
+                            },
                             "match": {
                               "description": "Match defines the matching statement.",
                               "x-kubernetes-preserve-unknown-fields": true
