--- a/testdata/e2e/config.yaml
+++ b/testdata/e2e/config.yaml
@@ -11,7 +11,8 @@ spec:
     forceTerminationGracePeriod: 5s
     parallel: 1
   namespace:
+    compiler: cel
     template:
       metadata:
         annotations:
-          from-config-file: hello
+          from-config-file: ("hello")
