--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
@@ -1698,6 +1698,17 @@
           "description": "NamespaceTemplate defines a template to create the test namespace.",
           "x-kubernetes-preserve-unknown-fields": true
         },
+        "namespaceTemplateCompiler": {
+          "description": "NamespaceTemplateCompiler defines the default compiler to use when evaluating expressions.",
+          "type": [
+            "string",
+            "null"
+          ],
+          "enum": [
+            "jp",
+            "cel"
+          ]
+        },
         "parallel": {
           "description": "The maximum number of tests to run at once.",
           "type": [
