--- a/.schemas/json/configuration-chainsaw-v1alpha2.json
+++ b/.schemas/json/configuration-chainsaw-v1alpha2.json
@@ -1856,6 +1856,17 @@
           ],
           "default": {},
           "properties": {
+            "compiler": {
+              "description": "Compiler defines the default compiler to use when evaluating expressions.",
+              "type": [
+                "string",
+                "null"
+              ],
+              "enum": [
+                "jp",
+                "cel"
+              ]
+            },
             "enabled": {
               "description": "Enabled determines whether resources should be considered for templating.",
               "type": [
