feat: add compiler at the step api level
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -2556,6 +2556,13 @@ spec:
                       description: Clusters holds a registry to clusters to support
                         multi-cluster tests.
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     deletionPropagationPolicy:
                       description: |-
                         DeletionPropagationPolicy decides if a deletion will propagate to the dependents of
