--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -221,6 +221,13 @@ spec:
                       required:
                       - entrypoint
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     delete:
                       description: Delete represents a deletion operation.
                       not:
@@ -1137,6 +1144,13 @@ spec:
                             required:
                             - entrypoint
                             type: object
+                          compiler:
+                            description: Compiler defines the default compiler to
+                              use when evaluating expressions.
+                            enum:
+                            - jp
+                            - cel
+                            type: string
                           delete:
                             description: Delete represents a deletion operation.
                             not:
@@ -1916,6 +1930,13 @@ spec:
                             required:
                             - entrypoint
                             type: object
+                          compiler:
+                            description: Compiler defines the default compiler to
+                              use when evaluating expressions.
+                            enum:
+                            - jp
+                            - cel
+                            type: string
                           delete:
                             description: Delete represents a deletion operation.
                             not:
@@ -2737,6 +2758,13 @@ spec:
                             required:
                             - entrypoint
                             type: object
+                          compiler:
+                            description: Compiler defines the default compiler to
+                              use when evaluating expressions.
+                            enum:
+                            - jp
+                            - cel
+                            type: string
                           delete:
                             description: Delete represents a deletion operation.
                             not:
@@ -3767,6 +3795,13 @@ spec:
                             required:
                             - entrypoint
                             type: object
+                          compiler:
+                            description: Compiler defines the default compiler to
+                              use when evaluating expressions.
+                            enum:
+                            - jp
+                            - cel
+                            type: string
                           continueOnError:
                             description: |-
                               ContinueOnError determines whether a test should continue or not in case the operation was not successful.
