--- a/.crds/chainsaw.kyverno.io_steptemplates.yaml
+++ b/.crds/chainsaw.kyverno.io_steptemplates.yaml
@@ -220,6 +220,13 @@ spec:
                       required:
                       - entrypoint
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     delete:
                       description: Delete represents a deletion operation.
                       not:
@@ -979,6 +986,13 @@ spec:
                       required:
                       - entrypoint
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     delete:
                       description: Delete represents a deletion operation.
                       not:
@@ -1738,6 +1752,13 @@ spec:
                       required:
                       - entrypoint
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     delete:
                       description: Delete represents a deletion operation.
                       not:
@@ -2708,6 +2729,13 @@ spec:
                       required:
                       - entrypoint
                       type: object
+                    compiler:
+                      description: Compiler defines the default compiler to use when
+                        evaluating expressions.
+                      enum:
+                      - jp
+                      - cel
+                      type: string
                     continueOnError:
                       description: |-
                         ContinueOnError determines whether a test should continue or not in case the operation was not successful.
