feat: add cel test
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/testdata/e2e/config.yaml
+++ b/testdata/e2e/config.yaml
@@ -15,4 +15,4 @@ spec:
     template:
       metadata:
         annotations:
-          from-config-file: ("hello")
+          from-config-file: (string("hello"))
